--- a/plugin.xml
+++ b/plugin.xml
@@ -52,7 +52,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </platform>
 
     <platform name="android">
-        <preference name="FIREBASE_ANALYTICS_VERSION"/>
+        <preference name="FIREBASE_ANALYTICS_VERSION" default="17.5.+"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FirebaseAnalytics">
