--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
            id="cordova-plugin-firebase-analytics"
-      version="5.0.0">
+      version="4.3.1">
 
     <name>FirebaseAnalyticsPlugin</name>
     <description>Cordova plugin for Firebase Analytics</description>
@@ -20,16 +20,13 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <engine name="cordova-ios" version=">=5.0.0"/>
     </engines>
 
-    <preference name="ANALYTICS_COLLECTION_ENABLED" default="true" />
-    <preference name="AUTOMATIC_SCREEN_REPORTING_ENABLED" default="true" />
+    <preference name="FIREBASE_ANALYTICS_COLLECTION_ENABLED" default="true" />
 
     <platform name="ios">
-        <preference name="IOS_FIREBASE_ANALYTICS_VERSION" default="~> 7.0.0"/>
-
         <config-file target="config.xml" parent="/*">
             <feature name="FirebaseAnalytics">
                 <param name="ios-package" value="FirebaseAnalyticsPlugin" />
-                <param name="onload" value="$ANALYTICS_COLLECTION_ENABLED" />
+                <param name="onload" value="$FIREBASE_ANALYTICS_COLLECTION_ENABLED" />
             </feature>
         </config-file>
 
@@ -38,10 +35,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             https://developer.apple.com/documentation/foundation/nsstring/1409420-boolvalue?preferredLanguage=occ
         -->
         <config-file target="*-Info.plist" parent="FIREBASE_ANALYTICS_COLLECTION_ENABLED">
-            <string>$ANALYTICS_COLLECTION_ENABLED</string>
-        </config-file>
-        <config-file target="*-Info.plist" parent="FirebaseAutomaticScreenReportingEnabled">
-            <string>$AUTOMATIC_SCREEN_REPORTING_ENABLED</string>
+            <string>$FIREBASE_ANALYTICS_COLLECTION_ENABLED</string>
         </config-file>
 
         <header-file src="src/ios/FirebaseAnalyticsPlugin.h" />
@@ -52,18 +46,18 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods>
-                <pod name="Firebase/Analytics" spec="$IOS_FIREBASE_ANALYTICS_VERSION" />
+                <pod name="Firebase/Analytics" spec="~> 7.0.0" />
             </pods>
         </podspec>
     </platform>
 
     <platform name="android">
-        <preference name="ANDROID_FIREBASE_ANALYTICS_VERSION" default="18.0.+"/>
+        <preference name="FIREBASE_ANALYTICS_VERSION" default="18.0.+"/>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="FirebaseAnalytics">
                 <param name="android-package" value="by.chemerisuk.cordova.firebase.FirebaseAnalyticsPlugin" />
-                <param name="onload" value="$ANALYTICS_COLLECTION_ENABLED" />
+                <param name="onload" value="$FIREBASE_ANALYTICS_COLLECTION_ENABLED" />
             </feature>
         </config-file>
 
@@ -77,14 +71,13 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <meta-data android:name="firebase_analytics_collection_enabled" android:value="$ANALYTICS_COLLECTION_ENABLED" />
-            <meta-data android:name="google_analytics_automatic_screen_reporting_enabled" android:value="$AUTOMATIC_SCREEN_REPORTING_ENABLED" />
+            <meta-data android:name="firebase_analytics_collection_enabled" android:value="$FIREBASE_ANALYTICS_COLLECTION_ENABLED" />
         </config-file>
 
         <dependency id="cordova-support-android-plugin" version="~1.0.0"/>
         <dependency id="cordova-support-google-services" version="^1.3.2"/>
 
-        <framework src="com.google.firebase:firebase-analytics:$ANDROID_FIREBASE_ANALYTICS_VERSION" />
+        <framework src="com.google.firebase:firebase-analytics:$FIREBASE_ANALYTICS_VERSION" />
 
         <source-file src="src/android/FirebaseAnalyticsPlugin.java"
             target-dir="src/by/chemerisuk/cordova/firebase/" />
